--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   hive_ce: ^2.9.0
   hive_ce_flutter: ^2.2.0
+  realm: ^20.0.1
   shared_preferences: ^2.4.0
 
 dev_dependencies:
